--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practicando con GIT</title>
+    <title>Practicando con GIT desde VSCode</title>
 </head>
 <body>
     <h1>GIT DESDE CERO</h1>
@@ -11,5 +10,10 @@
     <section>
         <p>Estoy en la rama test</p>
     </section>
+    <div>
+        <p>
+            Este cambioo fue realizado desde VSCode
+        </p>
+    </div>
 </body>
 </html>
