Ultimo cambio del curso - Fin del curso

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div>
         <p>
             Este cambioo fue realizado desde VSCode
+            <span>Nueva linea</span>
         </p>
     </div>
 </body>
